Use cleaner instead of finalize